pkg/plugins/policies/meshtimeout/plugin/testdata/basic.gateway.route.golden.yaml
ignorePortInHostMatching: true
name: sample-gateway:HTTP:8080
requestHeadersToRemove:
- x-kuma-tags
validateClusters: false
virtualHosts:
- domains:
  - '*'
  name: '*'
  routes:
  - match:
      path: /
    name: route_0
    route:
      clusterNotFoundResponseCode: INTERNAL_SERVER_ERROR
      idleTimeout: 1s
      timeout: 5s
      weightedClusters:
        clusters:
        - name: backend-26cb64fa4e85e7b7
          requestHeadersToAdd:
          - header:
              key: x-kuma-tags
              value: '&kuma.io/service=sample-gateway&'
          weight: 1
